Fix an issue that DownloadRequestLimiter is bypassed for some downloads

When network service is enabled, only navigation triggered download uses
DownloadRequestLimiter.
However, for anchor elements with download attrbutes,
DownloadRequestLimiter is not used.
Since these download come with a valid WebContents, the behavior is wrong.
For comparison, DownloadRequestLimiter is applied when network service
is disabled for these downloads.

Bug: 843631
Change-Id: Icf90ffdc8495f15d5a4cb3a5c56966dca2a95d4b
Reviewed-on: https://chromium-review.googlesource.com/1063021
Commit-Queue: Min Qin <qinmin@chromium.org>
Reviewed-by: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560033}
Former-commit-id: cfa1faaf7ad5b90f1acd674177edf5f67ce9f1a7